Finish the project

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a class="active" href="contact.html">Contact</a></li>
-                <li id="lg-bag"><a href="cart.html"><i cla ss="fa-solid fa-shopping-bag"></i></a></li>
+                <li id="lg-bag"><a href="cart.html"><i class="fa-solid fa-shopping-bag"></i></a></li>
                 <li id="logout-btn" style="display: none;"><a href="./login_feature/logout.php"><i
                             class="fa-solid fa-sign-out" style="color: #ff1111;"></i></a></li>
                 <a href="#" id="close"><i class="fa-solid fa-times"></i></a>
@@ -44,25 +44,25 @@
             <div>
                 <li>
                     <i class="fas fa-map-marker-alt"></i>
-                    <p>56Glassford Street Glassgow G1 1UL New York</p>
+                    <p>Shoubra Faculty of Engineering , Elkhalafawy , Cairo</p>
                 </li>
                 <li>
                     <i class="fas fa-envelope"></i>
-                    <p> contact@example.com</p>
+                    <p> capsule@outlook.com</p>
                 </li>
                 <li>
                     <i class="fas fa-phone-alt"></i>
-                    <p>contact@example.com</p>
+                    <p>+201045789121</p>
                 </li>
                 <li>
                     <i class="fas fa-clock"></i>
-                    <p>Monday to Saturday : 9.00am to 16pm</p>
+                    <p>Monday to Saturday : 10:00 - 18:00</p>
                 </li>
             </div>
         </div>
         <div class="map">
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2469.687216448234!2d-1.2519429757575637!3d51.75704287187112!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4876c6a9ef8c485b%3A0xd2ff1883a001afed!2z2KzYp9mF2LnYqSDYo9mI2YPYs9mB2YjYsdiv!5e0!3m2!1sar!2seg!4v1734018635761!5m2!1sar!2seg"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d725.6538329726188!2d31.248785746943092!3d30.099604351039776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x145841566466739b%3A0x7feb37acdd001dd5!2z2YPZhNmK2Kkg2KfZhNmH2YbYr9iz2Kkg2KjYtNio2LHYpyDYrNin2YXYudipINio2YbZh9inINmB2LHYuSDYp9mE2K7ZhNmB2KfZiNmK!5e0!3m2!1sar!2seg!4v1735015216137!5m2!1sar!2seg"
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
@@ -80,23 +80,23 @@
         <div class="people">
             <div>
                 <img src="assets/people/1.png" alt="">
-                <p><span>John Doe</span> Senior Marketing Manager <br>
-                    phone:+000 123 000 77 88 <br>
-                    Email: contact@example.com
+                <p><span>Ahmed Waleed</span> Senior UI UX engineer <br>
+                    phone:+201045789121 <br>
+                    Email: capsule@outlook.com
                 </p>
             </div>
             <div>
                 <img src="assets/people/2.png" alt="">
-                <p><span>William Smith </span> Senior Marketing Manager <br>
-                    phone:+000 123 000 77 88 <br>
-                    Email: contact@example.com
+                <p><span>Mohamed Mostafa </span> Senior Flutter Developer <br>
+                    phone: +201045789121 <br>
+                    Email: capsule@outlook.com
                 </p>
             </div>
             <div>
-                <img src="assets/people/3.png" alt="">
-                <p><span>Emma Stone</span> Senior Marketing Manager <br>
-                    phone:+000 123 000 77 88 <br>
-                    Email: contact@example.com
+                <img src="assets/people/2.png" alt="">
+                <p><span>Ahmed Khaled</span> Senior Flutter Developer <br>
+                    phone: +201045789121<br>
+                    Email: capsule@outlook.com
                 </p>
             </div>
         </div>
@@ -115,7 +115,7 @@
 
     <footer class="section-p1">
         <div class="col">
-            <img class="logo" src="assets/LogoBlack.png" height="40px" alt="">
+            <img class="logo" src="assets/Asset 3.png" height="40px" alt="">
             <h4>Contact</h4>
             <p><strong>Address:</strong> Shoubra Faculty of Engineering , Elkhalafawy , Cairo</p>
             <p><strong>Phone:</strong> +201045789121 /+204458901</p>
