--- a/shop.html
+++ b/shop.html
@@ -67,7 +67,7 @@
 
     <footer class="section-p1">
         <div class="col">
-            <img class="logo" src="assets/LogoBlack.png" height="40px" alt="">
+            <img class="logo" src="assets/Asset 3.png" height="40px" alt="">
             <h4>Contact</h4>
             <p><strong>Address:</strong> Shoubra Faculty of Engineering , Elkhalafawy , Cairo</p>
             <p><strong>Phone:</strong> +201045789121 /+204458901</p>
