--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
                 <li><a href="blog.html">Blog</a></li>
                 <li><a class="active" href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li id="lg-bag"><a href="cart.html"><i cla ss="fa-solid fa-shopping-bag"></i></a></li>
+                <li id="lg-bag"><a href="cart.html"><i class="fa-solid fa-shopping-bag"></i></a></li>
                 <li id="logout-btn" style="display: none;"><a href="./login_feature/logout.php"><i
                             class="fa-solid fa-sign-out" style="color: #ff1111;"></i></a></li>
                 <a href="#" id="close"><i class="fa-solid fa-times"></i></a>
@@ -42,14 +42,13 @@
         <img src="assets/about/a6.jpg" alt="">
         <div>
             <h2>Who We Are? </h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex
-                ea commodo consequat. Duis auteirure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat
-                nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                mollit
-                anim id est laborum.</p>
+            <p>At Capsule, we believe that fashion is more than just clothing—it's a statement of individuality and
+                self-expression. Our e-commerce platform is dedicated to curating a seamless shopping experience for
+                fashion enthusiasts, offering a handpicked selection of stylish apparel and accessories that cater to
+                all tastes. Whether you're searching for timeless classics, trendy pieces, or unique finds, Capsule has
+                something for everyone. We pride ourselves on quality, affordability, and sustainability, making fashion
+                accessible without compromise. Join us on this journey to redefine your wardrobe, one capsule at a time.
+            </p>
             <abbr title="">
                 Create stunning images with as much or as little control as you like thanks to a choice of Basic and
                 Creative modes.
@@ -106,7 +105,7 @@
 
     <footer class="section-p1">
         <div class="col">
-            <img class="logo" src="assets/LogoBlack.png" height="40px" alt="">
+            <img class="logo" src="assets/Asset 3.png" height="40px" alt="">
             <h4>Contact</h4>
             <p><strong>Address:</strong> Shoubra Faculty of Engineering , Elkhalafawy , Cairo</p>
             <p><strong>Phone:</strong> +201045789121 /+204458901</p>
