--- a/sproduct.html
+++ b/sproduct.html
@@ -94,7 +94,7 @@
 
   <footer class="section-p1">
     <div class="col">
-      <img class="logo" src="assets/LogoBlack.png" height="40px" alt="">
+      <img class="logo" src="assets/Asset 3.png" height="40px" alt="">
       <h4>Contact</h4>
       <p>
       <p><strong>Address:</strong> Shoubra Faculty of Engineering , Elkhalafawy , Cairo</p>
